feat: create product controller and service

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,6 +1,6 @@
 <%- include('includes/header') %>
 
 <body>
-  <div>Product</div>
+  <div>Product page</div>
 </body>
 <%- include('includes/footer') %>
