--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -3,5 +3,8 @@
 <body>
   <div>Product page</div>
   <div><%=member.memberNick%></div>
+  <% products.map((value,key) => { %>
+  <p><%= value.productName %> - <%= value.productSize %></p>
+  <% }) %>
 </body>
 <%- include('includes/footer') %>
