Fix: develop signup process and O task is done

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -86,7 +86,7 @@
                   type="file"
                   id="input-file"
                   class="upload-hidden form-control-file member-image"
-                  name="memberImage"
+                  name="productImage"
                 />
               </div>
               <p class="thumbnail-desc">
